--- a/julia/problem_010.ipynb
+++ b/julia/problem_010.ipynb
@@ -39,15 +39,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e058a1",
+   "id": "14911cdd",
    "metadata": {},
    "source": [
-    "### Solution 1 (primes package)"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "801d01c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function eratosthenes(n::Int64)::Vector{Int64}\n",
+    "    \n",
+    "    D = Dict{Int64, Vector{Int64}}()\n",
+    "    P = Vector{Int64}()\n",
+    "    q = 2 # first prime\n",
+    "\n",
+    "    while q < n\n",
+    "        if !(q in keys(D))\n",
+    "            D[q * q] = Int64[q] # Vector{Int64}([q])\n",
+    "            push!(P, q)\n",
+    "        else\n",
+    "            for p in D[q]\n",
+    "                haskey(D, p+q) ? push!(D[p+q], p) : D[p+q] = [p]\n",
+    "            end\n",
+    "            delete!(D, q)\n",
+    "        end\n",
+    "        q += 1\n",
+    "    end\n",
+    "    return P\n",
+    "end\n",
+    "\n",
+    "@assert eratosthenes(20) == [2, 3, 5, 7, 11, 13, 17, 19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b2b0154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  282.912 ms (5303988 allocations: 270.94 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime sum(eratosthenes(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e058a1",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (Primes package)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "00770042",
    "metadata": {},
    "outputs": [],
@@ -57,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "41426564",
    "metadata": {},
    "outputs": [
@@ -65,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.119 ms (7 allocations: 1.65 MiB)\n"
+      "  2.118 ms (7 allocations: 1.65 MiB)\n"
      ]
     },
     {
@@ -84,74 +150,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7aae58f",
-   "metadata": {},
-   "source": [
-    "### Solution 2 (sieve)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7c8ce172",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function eratosthenes(n::Int64)::Vector{Int64}\n",
-    "    \n",
-    "    D = Dict{Int64, Vector{Int64}}()\n",
-    "    P = Vector{Int64}()\n",
-    "    q = 2\n",
-    "    counter = 0\n",
-    "\n",
-    "    while counter < n\n",
-    "        if !(q in keys(D))\n",
-    "            D[q * q] = Int64[q] # Vector{Int64}([q])\n",
-    "            push!(P, q)\n",
-    "            counter += 1\n",
-    "        else\n",
-    "            for p in D[q]\n",
-    "                haskey(D, p+q) ? push!(D[p+q], p) : D[p+q] = [p]\n",
-    "            end\n",
-    "            delete!(D, q)\n",
-    "        end\n",
-    "        q += 1\n",
-    "    end\n",
-    "    return P\n",
-    "end\n",
-    "\n",
-    "@assert last(eratosthenes(6)) == 13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "dc009e2f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  293.178 ms (5344585 allocations: 273.95 MiB)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "142913828922"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "@btime sum(filter(x -> x < 2_000_000, eratosthenes(150_000)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "995c3063",
    "metadata": {},
    "source": [
@@ -166,7 +164,7 @@
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "bm = @benchmark sum(Primes.primes(2_000_000))\n",
+    "bm = @benchmark sum(eratosthenes(2_000_000))\n",
     "euler.save_benchmark(10, bm);"
    ]
   }
