--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -195,7 +195,9 @@
     "function multiples(hi)\n",
     "    s = 0\n",
     "    for n ∈ 3:hi-1\n",
-    "        (n%3 == 0 || n%5 == 0) && (s += n)\n",
+    "        if n%3 == 0 || n%5 == 0\n",
+    "            s += n\n",
+    "        end\n",
     "    end\n",
     "    return s\n",
     "end\n",
