--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -42,7 +42,7 @@
    "id": "3c9f1c3e",
    "metadata": {},
    "source": [
-    "### Solution 1 (full fibonacci sequence, conditional sum)"
+    "### Solution 1 (full Fibonacci sequence)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "id": "84912ae6",
    "metadata": {},
    "source": [
-    "### Solution 2 (keep previous two, sum even)"
+    "### Solution 2 (keep last two in sequence)"
    ]
   },
   {
