--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -39,15 +39,123 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e051b2b",
+   "id": "fb5b719d",
    "metadata": {},
    "source": [
-    "### Solution"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "172959df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function eratosthenes(n::Int64)::Vector{Int64}\n",
+    "    \n",
+    "    D = Dict{Int64, Vector{Int64}}()\n",
+    "    P = Vector{Int64}()\n",
+    "    q = 2\n",
+    "\n",
+    "    while q ≤ n\n",
+    "        if !(q in keys(D))\n",
+    "            D[q * q] = Int64[q] # Vector{Int64}([q])\n",
+    "            push!(P, q)\n",
+    "        else\n",
+    "            for p in D[q]\n",
+    "                haskey(D, p+q) ? push!(D[p+q], p) : D[p+q] = [p]\n",
+    "            end\n",
+    "            delete!(D, q)\n",
+    "        end\n",
+    "        q += 1\n",
+    "    end\n",
+    "    return P\n",
+    "end\n",
+    "\n",
+    "@assert eratosthenes(19) == [2, 3, 5, 7, 11, 13, 17, 19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "078b1e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function max_prime_factor(n, hi)\n",
+    "    prime_numbers = eratosthenes(hi)\n",
+    "    # prime_factors = Int64[]\n",
+    "    for p in prime_numbers\n",
+    "        n == p && return p\n",
+    "        while n%p == 0\n",
+    "            # push!(prime_factors, p)\n",
+    "            n ÷= p\n",
+    "        end\n",
+    "    end\n",
+    "    println(\"Incomplete processing, increase the value of 'hi' and run again.\")\n",
+    "    return nothing\n",
+    "end\n",
+    "\n",
+    "@assert max_prime_factor(13195, 50) == 29"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1095ab40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incomplete processing, increase the value of 'hi' and run again.\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_prime_factor(600851475143, 5_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9ec4eb73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  686.750 μs (18702 allocations: 970.84 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime max_prime_factor(600851475143, 7_500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e051b2b",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (Primes package)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "ee93432e",
    "metadata": {},
    "outputs": [],
@@ -57,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ebe9b788",
    "metadata": {},
    "outputs": [
@@ -65,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.650 μs (2 allocations: 128 bytes)\n"
+      "  1.629 μs (2 allocations: 128 bytes)\n"
      ]
     },
     {
@@ -92,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "0e920213",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "bm = @benchmark maximum(keys(Primes.factor(600851475143)))\n",
+    "bm = @benchmark max_prime_factor(600851475143, 7_500)\n",
     "euler.save_benchmark(3, bm);"
    ]
   }
