--- a/julia/problem_007.ipynb
+++ b/julia/problem_007.ipynb
@@ -42,7 +42,7 @@
    "id": "2732bc3e",
    "metadata": {},
    "source": [
-    "### Solution 1 (sieve of eratosthenes)"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  11.036 ms (270363 allocations: 13.34 MiB)\n"
+      "  16.405 ms (270363 allocations: 13.34 MiB)\n"
      ]
     },
     {
@@ -110,7 +110,7 @@
    "id": "2e32a6f8",
    "metadata": {},
    "source": [
-    "### Solution 2 (Primes)"
+    "### Solution 2 (Primes package)"
    ]
   },
   {
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.740 ms (0 allocations: 0 bytes)\n"
+      "  3.395 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "bm = @benchmark Primes.prime(10_001)\n",
+    "bm = @benchmark last(eratosthenes(10_001))\n",
     "euler.save_benchmark(7, bm);"
    ]
   },
