--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -32,7 +32,7 @@
    "id": "123e83b0",
    "metadata": {},
    "source": [
-    "### Solution 1 (full fibonacci sequence, conditional sum)"
+    "### Solution 1 (Full fibonacci sequence)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "id": "33f5f05c",
    "metadata": {},
    "source": [
-    "### Solution 2 (keep previous two, sum even)"
+    "### Solution 2 (keep last two in sequence)"
    ]
   },
   {
