--- a/python/problem_003.ipynb
+++ b/python/problem_003.ipynb
@@ -32,7 +32,7 @@
    "id": "02909f54",
    "metadata": {},
    "source": [
-    "### Solution 1 (sieve of eratosthenes)"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.39 ms ± 6.58 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.38 ms ± 2.41 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
    "id": "5c01be65",
    "metadata": {},
    "source": [
-    "### Solution 2 (sympy)"
+    "### Solution 2 (sympy package)"
    ]
   },
   {
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.6 μs ± 177 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "36.8 μs ± 54.2 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -197,12 +197,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.6 μs ± 369 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "1.39 ms ± 5.19 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o max(sympy.primefactors(600851475143))\n",
+    "bm = %timeit -o max(prime_factorization(600851475143))\n",
     "import euler\n",
     "euler.save_benchmark(3, bm)"
    ]
