--- a/python/problem_006.ipynb
+++ b/python/problem_006.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 6\n",
+    "# Problem 6\n",
     "https://projecteuler.net/problem=6"
    ]
   },
@@ -25,6 +25,14 @@
    ],
    "source": [
     "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84aab3c5",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
