--- a/python/problem_007.ipynb
+++ b/python/problem_007.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 7\n",
+    "# Problem 7\n",
     "https://projecteuler.net/problem=7"
    ]
   },
@@ -32,7 +32,7 @@
    "id": "982690ae",
    "metadata": {},
    "source": [
-    "### Solution 1 (sieve of eratosthenes)"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
@@ -66,13 +66,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prime(n):\n",
+    "def sieve(n):\n",
     "    primes = eratosthenes()\n",
     "    for i in range(n):\n",
     "        prime = next(primes)\n",
     "    return prime\n",
     "\n",
-    "assert prime(6) == 13"
+    "assert sieve(6) == 13"
    ]
   },
   {
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# answer\n",
-    "prime(10_001)"
+    "sieve(10_001)"
    ]
   },
   {
@@ -107,13 +107,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.9 ms ± 207 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "23.9 ms ± 608 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "%timeit prime(10_001)"
+    "%timeit sieve(10_001)"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "id": "621a97d8",
    "metadata": {},
    "source": [
-    "### Solution 2 (sympy)"
+    "### Solution 2 (sympy package)"
    ]
   },
   {
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.43 ms ± 4.47 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "4.64 ms ± 118 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -193,12 +193,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.57 ms ± 168 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "24.4 ms ± 468 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o sympy.prime(10_001)\n",
+    "bm = %timeit -o sieve(10_001)\n",
     "import euler\n",
     "euler.save_benchmark(7, bm)"
    ]
