--- a/python/problem_008.ipynb
+++ b/python/problem_008.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 8\n",
+    "# Problem 8\n",
     "https://projecteuler.net/problem=8"
    ]
   },
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "937 μs ± 4.7 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "926 μs ± 28.3 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "615 μs ± 9.94 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "607 μs ± 9.81 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.9 ms ± 230 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "59.5 ms ± 4.77 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -287,12 +287,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "608 μs ± 442 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "913 μs ± 7.05 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o largest_product_reduce(series, 13)\n",
+    "bm = %timeit -o largest_product_loop(series, 13)\n",
     "import euler\n",
     "euler.save_benchmark(8, bm)"
    ]
