--- a/python/problem_010.ipynb
+++ b/python/problem_010.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 10\n",
+    "# Problem 10\n",
     "https://projecteuler.net/problem=10"
    ]
   },
@@ -29,134 +29,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "287a3d5a",
+   "id": "b8985fe6",
    "metadata": {},
    "source": [
-    "### Solution 1 (prime range)"
+    "### Solution 1 (Sieve of Eratosthenes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce220220",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "464c26e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "142913828922"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# answer\n",
-    "sum(sympy.primerange(2_000_000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0eb6eed5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "941 ms ± 21.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# benchmark\n",
-    "%timeit sum(sympy.primerange(2_000_000))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "affb6b04",
-   "metadata": {},
-   "source": [
-    "### Slution 2 (sieve prime range)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f0c8734",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d64f32dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "142913828922"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# answer\n",
-    "sum(sympy.sieve.primerange(2_000_000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "910cab9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.41 ms ± 58.1 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# benchmark\n",
-    "%timeit sum(sympy.sieve.primerange(2_000_000))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a73a0844",
-   "metadata": {},
-   "source": [
-    "### Solution 3 (sieve of eratosthenes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "81c2912c",
+   "id": "4c9e5fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "02c9b941",
+   "execution_count": 3,
+   "id": "85abc53e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +83,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "df985170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "summation_of_primes(2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "97002264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "529 ms ± 3.92 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit summation_of_primes(2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287a3d5a",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (sympy: prime range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ce220220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "464c26e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "sum(sympy.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0eb6eed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "924 ms ± 2.51 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum(sympy.primerange(2_000_000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "affb6b04",
+   "metadata": {},
+   "source": [
+    "### Slution 2 (sympy: sieve prime range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5f0c8734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
-   "id": "7d2ebc28",
+   "id": "d64f32dc",
    "metadata": {},
    "outputs": [
     {
@@ -218,26 +218,26 @@
    ],
    "source": [
     "# answer\n",
-    "summation_of_primes(2_000_000)"
+    "sum(sympy.sieve.primerange(2_000_000))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5b472287",
+   "id": "910cab9d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "532 ms ± 16 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.42 ms ± 85.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "%timeit summation_of_primes(2_000_000)"
+    "%timeit sum(sympy.sieve.primerange(2_000_000))"
    ]
   },
   {
@@ -258,12 +258,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.45 ms ± 49.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "526 ms ± 2.55 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o sum(sympy.sieve.primerange(2_000_000))\n",
+    "bm = %timeit -o summation_of_primes(2_000_000)\n",
     "import euler\n",
     "euler.save_benchmark(10, bm)"
    ]
