--- a/python/problem_005.ipynb
+++ b/python/problem_005.ipynb
@@ -29,32 +29,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc7e0f8",
+   "id": "d55b482b",
    "metadata": {},
    "source": [
-    "#### Solution 1 (brute force)"
+    "### Solution 1 (brute force)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a53b3ca",
+   "id": "0038c060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smallest_multiple(n):\n",
-    "    x = n\n",
+    "def smallest_multiple_bf(n):\n",
+    "    x = 1\n",
     "    while not all([x%i == 0 for i in range(2, n)]):\n",
-    "        x += n\n",
+    "        x += 1\n",
     "    return x\n",
     "\n",
-    "assert smallest_multiple(10) == 2520"
+    "assert smallest_multiple_bf(10) == 2520"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8654830c",
+   "id": "e8f2bce9",
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +70,77 @@
    ],
    "source": [
     "# answer\n",
-    "smallest_multiple(20)"
+    "smallest_multiple_bf(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "55eb7167",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2min 59s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit -n1 -r1 smallest_multiple_bf(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc7e0f8",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (smart force)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4a53b3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_multiple(n):\n",
+    "    x = n # start with n, not with 1\n",
+    "    while not all([x%i == 0 for i in range(2, n)]):\n",
+    "        x += n # add n, not 1\n",
+    "    return x\n",
+    "\n",
+    "assert smallest_multiple(10) == 2520"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8654830c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "fbe22f60",
    "metadata": {},
    "outputs": [
@@ -83,13 +148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.77 s ± 186 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.33 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "%timeit smallest_multiple(20)"
+    "%timeit -n1 -r1 smallest_multiple(20)"
    ]
   },
   {
@@ -97,12 +162,12 @@
    "id": "8f97122d",
    "metadata": {},
    "source": [
-    "### Solution 2 (divisors)"
+    "### Solution 3 (divisors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "7121cef8",
    "metadata": {},
    "outputs": [],
@@ -124,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "db0fc8ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smallest_multiple(n):\n",
+    "def smallest_multiple_div(n):\n",
     "    divisors = set.union(*[set(divisor(i)[:-1]) for i in range(2, n+1)])\n",
     "    denominators = set(range(1, n)).difference(divisors)\n",
     "    x = n\n",
@@ -137,12 +202,12 @@
     "        x += n\n",
     "    return x\n",
     "\n",
-    "assert smallest_multiple(10) == 2520"
+    "assert smallest_multiple_div(10) == 2520"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "536a5930",
    "metadata": {},
    "outputs": [
@@ -152,19 +217,19 @@
        "232792560"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# answer\n",
-    "smallest_multiple(20)"
+    "smallest_multiple_div(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "20c655d1",
    "metadata": {},
    "outputs": [
@@ -172,13 +237,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.92 s ± 123 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.09 s ± 184 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "%timeit smallest_multiple(20)"
+    "%timeit smallest_multiple_div(20)"
    ]
   },
   {
@@ -186,12 +251,12 @@
    "id": "a7b193ac",
    "metadata": {},
    "source": [
-    "### Solution 3 (denominator check )"
+    "### Solution 4 (denominator check)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "4936b6b3",
    "metadata": {},
    "outputs": [],
@@ -213,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "1b4aa44f",
    "metadata": {},
    "outputs": [],
@@ -232,12 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "55705990",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smallest_multiple(n):\n",
+    "def smallest_multiple_dc(n):\n",
     "    divisors = set.union(*[set(divisor(i)[:-1]) for i in range(2, n+1)])\n",
     "    denominators = sorted(set(range(1, n)).difference(divisors), reverse=True)\n",
     "    x = n\n",
@@ -250,67 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cb153919",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "232792560"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# answer\n",
-    "smallest_multiple(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e41e025e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "853 ms ± 78.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# benchmark\n",
-    "%timeit smallest_multiple(20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1311dc5",
-   "metadata": {},
-   "source": [
-    "### Solution 4 (lcm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "494841bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "id": "28cb2fa6",
+   "id": "cb153919",
    "metadata": {},
    "outputs": [
     {
@@ -326,12 +332,71 @@
    ],
    "source": [
     "# answer\n",
-    "math.lcm(*range(1, 21))"
+    "smallest_multiple_dc(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "e41e025e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "918 ms ± 109 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit smallest_multiple_dc(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1311dc5",
+   "metadata": {},
+   "source": [
+    "### Solution 5 (math package: lcm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "494841bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "28cb2fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "math.lcm(*range(1, 21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "46f2d5e5",
    "metadata": {},
    "outputs": [
@@ -339,7 +404,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "906 ns ± 1.16 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "883 ns ± 1.09 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -353,12 +418,22 @@
    "id": "43fe898a",
    "metadata": {},
    "source": [
-    "### Solution 5 (lcm, denominators)"
+    "### Solution 6 (math package: lcm, using slected denominators)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
+   "id": "217e5734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "b4f50c85",
    "metadata": {},
    "outputs": [
@@ -368,7 +443,7 @@
        "232792560"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "f0d85df2",
    "metadata": {},
    "outputs": [
@@ -388,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "518 ns ± 16.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "484 ns ± 2.34 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -407,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "d7359bfa",
    "metadata": {},
    "outputs": [
@@ -415,12 +490,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "513 ns ± 1.61 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "779 ms ± 11.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o math.lcm(*range(11, 21))\n",
+    "bm = %timeit -o smallest_multiple_dc(20)\n",
     "import euler\n",
     "euler.save_benchmark(5, bm)"
    ]
