--- a/python/problem_009.ipynb
+++ b/python/problem_009.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "##Problem 9\n",
+    "# Problem 9\n",
     "https://projecteuler.net/problem=9"
    ]
   },
